--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,29 @@
+alembic==1.7.7
+astroid==2.11.3
+click==8.1.3
+dill==0.3.4
 Flask==2.0.2
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+isort==5.10.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lazy-object-proxy==1.7.1
+Mako==1.2.0
+MarkupSafe==2.1.1
+mccabe==0.7.0
+platformdirs==2.5.2
+pylint==2.13.7
 python-dotenv==0.19.2
+SQLAlchemy==1.4.36
+tomli==2.0.1
+typed-ast==1.5.3
+typing_extensions==4.2.0
+Werkzeug==2.1.2
+wrapt==1.14.0
+WTForms==3.0.1
+zipp==3.8.0
